[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ExpChart.gd" type="Script" id=1]
[ext_resource path="res://fonts/dynamic/ExpChart.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ScrollText.gd" type="Script" id=3]
[ext_resource path="res://sprites/ui/icons/exp_candy_icons/Bag_Exp._Candy_XS_Sprite.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/icons/exp_candy_icons/Bag_Exp._Candy_XL_Sprite.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/icons/exp_candy_icons/Bag_Exp._Candy_M_Sprite.png" type="Texture" id=6]
[ext_resource path="res://sprites/ui/icons/exp_candy_icons/Bag_Exp._Candy_S_Sprite.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/icons/exp_candy_icons/Bag_Exp._Candy_L_Sprite.png" type="Texture" id=8]

[sub_resource type="ViewportTexture" id=1]
flags = 13
viewport_path = NodePath("Viewport")

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.513726, 1, 0.380392 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Chart" type="Panel"]
anchor_right = 0.195313
anchor_bottom = 0.576667
rect_min_size = Vector2( 200, 346 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )
transparent_bg = true
msaa = 2
fxaa = true
hdr = false
usage = 0
render_target_v_flip = true

[node name="Line2D" type="Line2D" parent="Viewport"]
points = PoolVector2Array( 500, 0, 0, 500 )
width = 5.0
default_color = Color( 0.4, 0.501961, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 165.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="RateSelector" type="OptionButton" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 192.0
margin_bottom = 189.0
text = "Erratic"
align = 1
items = [ "Erratic", null, false, 0, null, "Fast", null, false, 1, null, "Medium Fast", null, false, 2, null, "Medium", null, false, 3, null, "Medium Slow", null, false, 4, null, "Fluctuating", null, false, 5, null ]
selected = 0

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 193.0
margin_right = 192.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 10 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 192.0
margin_bottom = 230.0
rect_min_size = Vector2( 192, 23 )
rect_clip_content = true
size_flags_horizontal = 3
script = ExtResource( 3 )
speed = 0.05

[node name="Label" type="Label" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -192.0
margin_bottom = -23.0
rect_min_size = Vector2( 192, 0 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "(6/5)n³ - 15n² + 100n -140"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LevelLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 192.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 24 )
align = 1
placeholder_text = "L(evel)="
caret_blink = true
caret_blink_speed = 0.5

[node name="ExpLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 192.0
margin_bottom = 286.0
align = 1
placeholder_text = "EXP="
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 192.0
margin_bottom = 314.0

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
disabled = true
text = "XS"
icon = ExtResource( 4 )
expand_icon = true
items = [ "XS", ExtResource( 4 ), false, 0, null, "S", ExtResource( 7 ), false, 1, null, "M", ExtResource( 6 ), false, 2, null, "L", ExtResource( 8 ), false, 3, null, "XL", ExtResource( 5 ), false, 4, null ]
selected = 0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 24.0
size_flags_horizontal = 3
allow_greater = true

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 192.0
margin_bottom = 338.0
text = "Reset to Current"

[connection signal="visibility_changed" from="." to="." method="_on_Chart_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/RateSelector" to="." method="_on_RateSelector_item_selected"]
[connection signal="text_changed" from="VBoxContainer/LevelLine" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ExpLine" to="." method="_on_ExpLine_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
